Update lang fr_GA

--- a/htdocs/langs/fr_GA/cashdesk.lang
+++ b/htdocs/langs/fr_GA/cashdesk.lang
@@ -1,2 +1,138 @@
-# Dolibarr language file - Source file is en_US - cashdesk
-NotAvailableWithBrowserPrinter=Not available when printer for receipt is set to browser
+# Language file - Source file is en_US - cashdesk
+CashDeskMenu=Point vente
+CashDesk=Caisse enregistreuse
+CashDeskBankCash=Compte bancaire (liquide)
+CashDeskBankCB=Compte bancaire (cartes)
+CashDeskBankCheque=Compte bancaire (chèques)
+CashDeskWarehouse=Entrepôt
+CashdeskShowServices=Vendre des services
+CashDeskProducts=Produits
+CashDeskStock=Stock
+CashDeskOn=de
+CashDeskThirdParty=Tiers
+ShoppingCart=Panier
+NewSell=Nouvelle vente
+AddThisArticle=Ajouter cet article
+RestartSelling=Reprendre la vente
+SellFinished=Vente complète
+PrintTicket=Imprimer ticket
+SendTicket=Envoyer le ticket
+NoProductFound=Aucun article trouvé
+ProductFound=produit trouvé
+NoArticle=Aucun article
+Identification=Identification
+Article=Article
+Difference=Difference
+TotalTicket=Total ticket
+NoVAT=Pas de TVA pour cette vente
+Change=Rendu
+BankToPay=Compte pour le règlement
+ShowCompany=Voir société
+ShowStock=Voir entrepôt
+DeleteArticle=Cliquez pour enlever cet article
+FilterRefOrLabelOrBC=Recherche (Ref/Lib.)
+UserNeedPermissionToEditStockToUsePos=Vous demandez de réduire le stock lors de la création de la facture. L'utilisateur qui utilise le Point De Vente doit donc avoir l'autorisation de modifier le stock.
+DolibarrReceiptPrinter=Imprimante reçu
+PointOfSale=Point de Vente
+PointOfSaleShort=PdV
+CloseBill=Fermer la facture
+Floors=Etages
+Floor=Etage
+AddTable=Ajouter une table
+Place=Emplacement
+TakeposConnectorNecesary='Connecteur TakePOS' requis
+OrderPrinters=Ajoute un bouton qui permet d'envoyer une commande sans paiement sur certaines imprimantes spécifiques (par exemple pour envoyer une commande en cuisine)
+NotAvailableWithBrowserPrinter=Non disponible lorsque l'imprimante pour reçu est définie sur navigateur
+SearchProduct=Rechercher un produit
+Receipt=Reçu
+Header=Entête
+Footer=Bas de page
+AmountAtEndOfPeriod=Montant en fin de période (jour, mois ou année)
+TheoricalAmount=Montant théorique
+RealAmount=Montant réel
+CashFence=Fermeture de caisse
+CashFenceDone=Clôture de caisse effectuée pour la période
+NbOfInvoices=Nb de factures
+Paymentnumpad=Type de pavé pour entrer le paiement
+Numberspad=Pavé numérique
+BillsCoinsPad=Pavé avec montant des Pièces et Billets
+DolistorePosCategory=Modules TakePOS et autres solutions de PDV pour Dolibarr
+TakeposNeedsCategories=TakePOS a besoin d'au moins une catégorie de produits pour fonctionner
+TakeposNeedsAtLeastOnSubCategoryIntoParentCategory=TakePOS a besoin d'au moins 1 catégorie de produits dans la catégorie <b> %s </b> pour fonctionner
+OrderNotes=Il est possible d'ajouter des notes sur chacun des produits commandés
+CashDeskBankAccountFor=Compte par défaut à utiliser pour les paiements en
+NoPaimementModesDefined=Aucun mode de paiement défini dans la configuration de TakePOS
+TicketVatGrouped=Grouper la TVA par taux sur les tickets / reçus
+AutoPrintTickets=Imprimer automatiquement les tickets / reçus
+PrintCustomerOnReceipts=Imprimer le client sur les tickets|reçus
+EnableBarOrRestaurantFeatures=Activer les fonctionnalités pour bar ou restaurant
+ConfirmDeletionOfThisPOSSale=Confirmez-vous la suppression de cette vente en cours?
+ConfirmDiscardOfThisPOSSale=Voulez-vous écarter cette vente en cours?
+History=Historique
+ValidateAndClose=Valider et fermer
+Terminal=Terminal
+NumberOfTerminals=Nombre de terminaux
+TerminalSelect=Sélectionnez le terminal que vous souhaitez utiliser:
+POSTicket=Ticket POS
+POSTerminal=Terminal PDV
+POSModule=Module POS (PDV)
+BasicPhoneLayout=Utiliser une interface basique pour les smartphones
+SetupOfTerminalNotComplete=La configuration du terminal %s n'est pas terminée
+DirectPayment=Paiement direct
+DirectPaymentButton=Ajouter un bouton "Paiement direct en espèces"
+InvoiceIsAlreadyValidated=La facture est déjà validée
+NoLinesToBill=Aucune ligne à facturer
+CustomReceipt=Reçu personnalisé
+ReceiptName=Nom du reçu
+ProductSupplements=Gérer les suppléments de produits
+SupplementCategory=Catégorie des suppléments
+ColorTheme=Couleur du thème
+Colorful=Coloré
+HeadBar=Bandeau du haut
+SortProductField=Champ de tri des produits
+Browser=Navigateur
+BrowserMethodDescription=Impression simple et facile des reçus. Seuls quelques paramètres pour configurer le reçu. Impression via le navigateur.
+TakeposConnectorMethodDescription=Module externe avec fonctionnalités supplémentaires. Possibilité d'imprimer depuis le cloud.
+PrintMethod=Méthode d'impression
+ReceiptPrinterMethodDescription=Méthode puissante avec beaucoup de paramètres. Entièrement personnalisable avec des modèles. Le serveur hébergeant l'application ne peut pas être dans le Cloud (elle doit pouvoir joindre les imprimantes de votre réseau physique).
+ByTerminal=Par terminal
+TakeposNumpadUsePaymentIcon=Utilisez un icône au lieu du texte sur les boutons de paiement du pavé numérique
+CashDeskRefNumberingModules=Module de numérotation pour le POS
+CashDeskGenericMaskCodes6 = <br>La balise <b> {TN} </b> est utilisée pour ajouter le numéro de terminal
+TakeposGroupSameProduct=Regrouper les mêmes lignes de produits
+StartAParallelSale=Lancer une nouvelle vente en parallèle
+SaleStartedAt=Ventes démarrées à %s
+ControlCashOpening=Ouvre la fenêtre "Contôle de caisse" lors de l'ouverture du TPV
+CloseCashFence=Clôturer la caisse
+CashReport=Rapport de caisse
+MainPrinterToUse=Imprimante principale à utiliser
+OrderPrinterToUse=Imprimante à utiliser
+MainTemplateToUse=Modèle principal à utiliser
+OrderTemplateToUse=Modèle de commande à utiliser
+BarRestaurant=Bar Restaurant
+AutoOrder=Commande par le client lui même
+RestaurantMenu=Menu
+CustomerMenu=Menu client
+ScanToMenu=Scannez le code QR pour voir le menu
+ScanToOrder=Scannez le code QR pour commander
+Appearance=Apparence
+HideCategoryImages=Masquer les images de catégorie
+HideProductImages=Masquer les images de produits
+NumberOfLinesToShow=Nombre de lignes d'images à afficher
+DefineTablePlan=Définir le plan des tables
+GiftReceiptButton=Ajouter un bouton "Reçu cadeau"
+GiftReceipt=Reçu cadeau
+ModuleReceiptPrinterMustBeEnabled=Le module Imprimante de reçus doit d'abord avoir été activée
+AllowDelayedPayment=Autoriser le paiement différé
+PrintPaymentMethodOnReceipts=Imprimer le mode de paiement sur les tickets | reçus
+WeighingScale=échelle de poids
+ShowPriceHT = Afficher la colonne du prix HT (à l'écran)
+ShowPriceHTOnReceipt = Afficher la colonne avec le prix hors taxes (sur le ticket de caisse)
+CustomerDisplay=Affichage client
+SplitSale=Fractionner la vente
+PrintWithoutDetailsButton=Affiche le bouton "Générer sans les détails"
+PrintWithoutDetailsLabelDefault=Libellé de la ligne par défaut sur l'impression sans détail
+PrintWithoutDetails=Générer sans les détails
+YearNotDefined=Year is not defined
+TakeposBarcodeRuleToInsertProduct=Règle sur le code-barre pour insérer un produit
+TakeposBarcodeRuleToInsertProductDesc=Règle sous la forme "ref:NB+qu:NB+qd:NB+other:NB" où NB correpond au nombre de caractères composant la partie du code-barre avec : <ul><li><b>ref</b> : la référence du produit</li><li><b>qu</b> : la quantité (unités)<l/i><li><b>qd</b> : la quantité (décimales)</li><li><b>other</b> : autres caractères</li></ul>
