--- a/htdocs/langs/fr_GA/members.lang
+++ b/htdocs/langs/fr_GA/members.lang
@@ -1,3 +1,220 @@
 # Dolibarr language file - Source file is en_US - members
-MembersTickets=Membership address sheet
-NewSubscription=New contribution
+MembersArea=Espace adhérents
+MemberCard=Fiche adhérent
+SubscriptionCard=Fiche cotisation
+Member=Adhérent
+Members=Adhérents
+ShowMember=Afficher fiche adhérent
+UserNotLinkedToMember=Utilisateur non lié à un adhérent
+ThirdpartyNotLinkedToMember=Tiers non lié à un adhérent
+MembersTickets=Étiquettes d'adresses adhérents
+FundationMembers=Membres de l'association
+ListOfValidatedPublicMembers=Liste des adhérents publics validés
+ErrorThisMemberIsNotPublic=Cet adhérent n'est pas public
+ErrorMemberIsAlreadyLinkedToThisThirdParty=Un autre adhérent (nom: <b>%s</b>, identifiant : <b>%s</b>) est déjà lié au tiers <b>%s</b>. Supprimer le lien existant d'abord car un tiers ne peut être lié qu'à un seul adhérent (et vice versa).
+ErrorUserPermissionAllowsToLinksToItselfOnly=Pour des raisons de sécurité, il faut posséder les droits de modification de tous les utilisateurs pour pouvoir lier un adhérent à un utilisateur autre que vous même.
+SetLinkToUser=Lier à un utilisateur Dolibarr
+SetLinkToThirdParty=Lier à un tiers Dolibarr
+MembersCards=Carte de visite pour les adhérents
+MembersList=Liste des adhérents
+MembersListToValid=Liste des adhérents brouillons (à valider)
+MembersListValid=Liste des adhérents valides
+MembersListUpToDate=Liste des adhérents validés avec une cotisation à jour
+MembersListNotUpToDate=Liste des adhérents validés avec une cotisation expirée
+MembersListExcluded=Liste des adhérents exclus
+MembersListResiliated=Liste des adhérents résiliés
+MembersListQualified=Liste des adhérents qualifiés
+MenuMembersToValidate=Adhérents brouillons
+MenuMembersValidated=Adhérents validés
+MenuMembersExcluded=Adhérents exclus
+MenuMembersResiliated=Adhérents résiliés
+MembersWithSubscriptionToReceive=Adhérents avec cotisation à recevoir
+MembersWithSubscriptionToReceiveShort=Cotisations à recevoir
+DateSubscription=Date adhésion
+DateEndSubscription=Date fin adhésion
+EndSubscription=Fin adhésion
+SubscriptionId=Id adhésion
+WithoutSubscription=Sans adhésion
+MemberId=Id adhérent
+NewMember=Nouvel adhérent
+MemberType=Type d'adhérent
+MemberTypeId=Id type adhérent
+MemberTypeLabel=Libellé du type adhérent
+MembersTypes=Types d'adhérents
+MemberStatusDraft=Brouillon (à valider)
+MemberStatusDraftShort=Brouillon
+MemberStatusActive=Validé (attente cotisation)
+MemberStatusActiveShort=Validé
+MemberStatusActiveLate=Adhésion / cotisation expirée
+MemberStatusActiveLateShort=Expiré
+MemberStatusPaid=Adhésions à jour
+MemberStatusPaidShort=A jour
+MemberStatusExcluded=Adhérent exclu
+MemberStatusExcludedShort=Exclu
+MemberStatusResiliated=Adhérent résilié
+MemberStatusResiliatedShort=Résilié
+MembersStatusToValid=Adhérents brouillons
+MembersStatusExcluded=Adhérents exclus
+MembersStatusResiliated=Adhérents résiliés
+MemberStatusNoSubscription=Validé (pas de cotisation nécessaire)
+MemberStatusNoSubscriptionShort=Validé
+SubscriptionNotNeeded=Aucune cotisation requise
+NewCotisation=Nouvelle adhésion
+PaymentSubscription=Paiement cotisation
+SubscriptionEndDate=Date de fin adhésion
+MembersTypeSetup=Configuration des types d'adhérents
+MemberTypeModified=Type d'adhérent modifié
+DeleteAMemberType=Supprimer un type d'adhérent
+ConfirmDeleteMemberType=Êtes-vous sur de vouloir supprimer ce type d' adhérent ?
+MemberTypeDeleted=Type d'adhérent supprimé
+MemberTypeCanNotBeDeleted=Ce type d'adhérent ne peut pas être supprimé
+NewSubscription=Nouvelle cotisation
+NewSubscriptionDesc=Ce formulaire permet de vous inscrire comme nouvel adhérent de l'association. Pour un renouvellement (si vous êtes déjà adhérent), contactez plutôt l'association par email %s.
+Subscription=Adhésion / cotisation
+Subscriptions=Adhésions / cotisations
+SubscriptionLate=En retard
+SubscriptionNotReceived=Cotisation non reçue
+ListOfSubscriptions=Liste des cotisations
+SendCardByMail=Envoyer fiche par email
+AddMember=Créer adhérent
+NoTypeDefinedGoToSetup=Aucun type d'adhérent défini. Allez dans le menu "Types d'adhérents"
+NewMemberType=Nouveau type de membre
+WelcomeEMail=Email de bienvenue
+SubscriptionRequired=Soumis à cotisation
+DeleteType=Supprimer
+VoteAllowed=Vote autorisé
+Physical=Personne physique
+Moral=Personne morale
+MorAndPhy=Personnes morales et physiques
+Reenable=Réactiver
+ExcludeMember=Exclure un adhérent
+Exclude=Exclure
+ConfirmExcludeMember=Êtes-vous sûr de vouloir exclure cet adhérent ?
+ResiliateMember=Résilier un adhérent
+ConfirmResiliateMember=Êtes-vous sûr de vouloir résilier cet adhérent ?
+DeleteMember=Effacer un membre
+ConfirmDeleteMember=Êtes-vous sûr de vouloir supprimer ce membre (Supprimer un membre supprime aussi toutes ses cotisations) ?
+DeleteSubscription=Effacer une adhésion
+ConfirmDeleteSubscription=Êtes-vous sûr de vouloir effacer cette adhésion ?
+Filehtpasswd=Fichier htpasswd
+ValidateMember=Valider un adhérent
+ConfirmValidateMember=Êtes-vous sûr de vouloir valider cet adhérent ?
+FollowingLinksArePublic=Les liens suivants sont des pages accessibles à tous et non protégées par aucune habilitation Dolibarr. Ces pages n'ont aucun formatage et sont fournies à titre d'exemple pour les associations qui veulent des scripts publics de consultation.
+PublicMemberList=Liste des membres publics
+BlankSubscriptionForm=Formulaire d'auto-inscription publique
+BlankSubscriptionFormDesc=Dolibarr peut vous fournir un URL/site web public afin de permettre aux visiteurs externes de faire une demande d'inscription à la fondation. Si un module de paiement est actif, un formulaire de paiement sera également fourni automatiquement.
+EnablePublicSubscriptionForm=Activer le formulaire public d'auto-inscription
+ForceMemberType=Forcer le type d'adhérent
+ExportDataset_member_1=Adhérents et cotisations
+ImportDataset_member_1=Adhérents
+LastMembersModified=Les %s derniers adhérents modifiés
+LastSubscriptionsModified=Les %s dernières adhésions modifiées
+String=Chaîne
+Text=Texte long
+Int=Numérique
+DateAndTime=Date et heure
+PublicMemberCard=Fiche adhérent publique
+SubscriptionNotRecorded=Adhésion non enregistrée
+AddSubscription=Créer cotisation
+ShowSubscription=Afficher adhésion
+# Label of email templates
+SendingAnEMailToMember=Envoi d'informations par e-mail à un adhérent
+SendingEmailOnAutoSubscription=Envoi d'email lors de l'auto-inscription
+SendingEmailOnMemberValidation=Envoie d'email à la validation d'un nouvel adhérent
+SendingEmailOnNewSubscription=Envoyer un email sur une nouvelle adhésion
+SendingReminderForExpiredSubscription=Envoi d'un rappel pour les adhésions expirées
+SendingEmailOnCancelation=Envoie d'email à l'annulation
+SendingReminderActionComm=Envoyer un rappel pour un événement d'agenda
+# Topic of email templates
+YourMembershipRequestWasReceived=Votre demande d'adhésion a été reçue.
+YourMembershipWasValidated=Votre adhésion a été enregistrée
+YourSubscriptionWasRecorded=Votre nouvelle cotisation a été enregistrée
+SubscriptionReminderEmail=Rappel de cotisation
+YourMembershipWasCanceled=Votre adhésion a été annulée
+CardContent=Contenu de votre fiche adhérent
+# Text of email templates
+ThisIsContentOfYourMembershipRequestWasReceived=Nous vous informons que votre demande d'adhésion a bien été reçue. <br> <br>
+ThisIsContentOfYourMembershipWasValidated=Nous vous informons que votre adhésion a été validé avec les informations suivantes:<br><br>
+ThisIsContentOfYourSubscriptionWasRecorded=Nous vous informons que votre nouvelle cotisation a été enregistrée.<br><br>
+ThisIsContentOfSubscriptionReminderEmail=Nous voulons vous informer que votre adhésion est sur le point d'expirer ou a déjà expiré (__MEMBER_LAST_SUBSCRIPTION_DATE_END__). Nous espérons que vous pourrez la renouveler, votre soutien nous est précieux.<br><br>
+ThisIsContentOfYourCard=Ceci est un rappel des informations que nous avons vous concernant. N'hésitez pas à nous contacter en cas d'erreur.<br><br>
+DescADHERENT_AUTOREGISTER_NOTIF_MAIL_SUBJECT=Sujet de l'email reçu en cas d'auto-inscription d'un invité
+DescADHERENT_AUTOREGISTER_NOTIF_MAIL=Email reçu en cas d'auto-inscription d'un invité
+DescADHERENT_EMAIL_TEMPLATE_AUTOREGISTER=Modèle Email à utiliser pour envoyer un email à un adhérent sur auto-inscription de l'adhérent
+DescADHERENT_EMAIL_TEMPLATE_MEMBER_VALIDATION=Modèle d'email à utiliser pour envoyer un email à un membre sur la validation d'un membre
+DescADHERENT_EMAIL_TEMPLATE_SUBSCRIPTION=Modèle d'email électronique à utiliser pour envoyer un courrier électronique à un membre lors de l'enregistrement d'une nouvelle cotisation
+DescADHERENT_EMAIL_TEMPLATE_REMIND_EXPIRATION=Modèle d'email électronique à utiliser pour envoyer un rappel par courrier électronique lorsque l'adhésion est sur le point d'expirer
+DescADHERENT_EMAIL_TEMPLATE_CANCELATION=Modèle d'email utilisé pour envoyer un email à un adhérent lors de l'annulation d'adhésion
+DescADHERENT_EMAIL_TEMPLATE_EXCLUSION=Modèle de courriel à utiliser pour envoyer un courriel à un adhérent lors de son exclusion
+DescADHERENT_MAIL_FROM=Email émetteur pour les mails automatiques
+DescADHERENT_ETIQUETTE_TYPE=Format pages étiquettes
+DescADHERENT_ETIQUETTE_TEXT=Texte imprimé sur les planches d'adresses adhérent
+DescADHERENT_CARD_TYPE=Format pages cartes d'adhérent
+DescADHERENT_CARD_HEADER_TEXT=Texte imprimé sur le haut des cartes d'adhérent
+DescADHERENT_CARD_TEXT=Texte imprimé sur les cartes d'adhérent (Aligné à gauche)
+DescADHERENT_CARD_TEXT_RIGHT=Texte imprimé sur les cartes d'adhérent (Aligné à droite)
+DescADHERENT_CARD_FOOTER_TEXT=Texte imprimé sur le bas des cartes d'adhérent
+ShowTypeCard=Voir type '%s'
+HTPasswordExport=Génération fichier htpassword
+NoThirdPartyAssociatedToMember=Pas de tiers associé à cet adhérent
+MembersAndSubscriptions=Adhérents et Cotisations
+MoreActions=Action complémentaire à l'enregistrement
+MoreActionsOnSubscription=Action complémentaire proposée par défaut à l'enregistrement de l'adhésion
+MoreActionBankDirect=Création une écriture directe sur le compte bancaire ou caisse
+MoreActionBankViaInvoice=Créer une facture avec paiement sur compte bancaire ou caisse
+MoreActionInvoiceOnly=Création facture sans paiement
+LinkToGeneratedPages=Génération de cartes de visites ou planches d'adresses
+LinkToGeneratedPagesDesc=Cet écran vous permet de générer des planches de cartes de visite ou d'étiquettes d'adresses pour chaque adhérent ou pour un adhérent en particulier.
+DocForAllMembersCards=Génération de cartes pour tous les adhérents
+DocForOneMemberCards=Génération de cartes pour un adhérent particulier
+DocForLabels=Génération d'étiquettes d'adresses
+SubscriptionPayment=Paiement cotisation
+LastSubscriptionDate=Date de la dernière cotisation
+LastSubscriptionAmount=Montant dernière adhésion
+LastMemberType=Dernier type d'adhérent
+MembersStatisticsByCountries=Statistiques des membres par pays
+MembersStatisticsByState=Statistiques des membres par département/province/canton
+MembersStatisticsByTown=Statistiques des membres par ville
+MembersStatisticsByRegion=Statistiques des membres par région
+NbOfMembers=Nombre total d'adhérents
+NbOfActiveMembers=Nombre total d'adhérents actifs actuellement
+NoValidatedMemberYet=Aucun membre validé trouvé
+MembersByCountryDesc=Cet écran vous présente une vue statistique du nombre d'adhérents par pays. Le graphique utilise toutefois le service en ligne de graphique de Google et n'est opérationnel uniquement que si une connexion internet est disponible.
+MembersByStateDesc=Cet écran vous présente une vue statistique du nombre d'adhérents par département/province/canton.
+MembersByTownDesc=Cet écran vous présente une vue statistique du nombre d'adhérents par ville.
+MembersByNature=Cet écran vous montre les statistiques sur les adhérents par nature.
+MembersByRegion=Cet écran vous montre les statistiques sur les adhérents par région.
+MembersStatisticsDesc=Choisissez les statistiques que vous désirez consulter...
+MenuMembersStats=Statistiques
+LastMemberDate=Date dernière adhésion
+LatestSubscriptionDate=Date de dernière cotisation
+MemberNature=Nature de l'adhérent
+MembersNature=Nature des adhérents
+Public=Informations publiques
+NewMemberbyWeb=Nouvel adhérent ajouté. En attente de validation
+NewMemberForm=Nouvel Adhérent form
+SubscriptionsStatistics=Statistiques sur les cotisations
+NbOfSubscriptions=Nombre de cotisations
+AmountOfSubscriptions=Montant des cotisations
+TurnoverOrBudget=Chiffre affaire (pour société) ou Budget (asso ou collectivité)
+DefaultAmount=Montant par défaut de la cotisation
+CanEditAmount=Le visiteur peut modifier / choisir le montant de sa cotisation
+MEMBER_NEWFORM_PAYONLINE=Rediriger sur la page intégrée de paiement en ligne
+ByProperties=Par nature
+MembersStatisticsByProperties=Statistiques des adhérents par nature
+VATToUseForSubscriptions=Taux de TVA pour les cotisations
+NoVatOnSubscription=Pas de TVA pour les cotisations
+ADHERENT_PRODUCT_ID_FOR_SUBSCRIPTIONS=Produit/Service utilisé pour la ligne de cotisation dans la facture: %s
+NameOrCompany=Nom ou société
+SubscriptionRecorded=Adhésion enregistré
+NoEmailSentToMember=Aucun e-mail envoyé à l'adhérent
+EmailSentToMember=Email envoyé à l'adhérent à %s
+SendReminderForExpiredSubscriptionTitle=Envoyer une relance par mail pour les cotisations expirées
+SendReminderForExpiredSubscription=Envoyer un rappel par e-mail aux membres lorsque l'adhésion est sur le point d'expirer (le paramètre est le nombre de jours avant la fin de l'adhésion pour envoyer le rappel. Il peut s'agir d'une liste de jours séparé par un point-virgule, par exemple '10;5;0;-5')
+MembershipPaid=Adhésion payée pour la période en cours (jusqu'au %s)
+YouMayFindYourInvoiceInThisEmail=Vous pouvez trouver votre facture jointe à cet email
+XMembersClosed=%s adhérent(s) résilié(s)
+XExternalUserCreated=%s utilisateur(s) externe(s) créé(s)
+ForceMemberNature=Forcer la nature de l'adhérent (personne physique ou morale)
+CreateDolibarrLoginDesc=La création d'un login utilisateur pour les membres leur permet de se connecter à l'application. En fonction des autorisations accordées, ils pourront par exemple consulter ou modifier eux-mêmes leur dossier.
+CreateDolibarrThirdPartyDesc=Un tiers est l'entité juridique qui sera utilisée sur la facture si vous décidez de générer une facture pour chaque cotisation. Vous pourrez le créer plus tard au cours du processus d'enregistrement de la cotisation.
