--- a/htdocs/langs/fr_GA/propal.lang
+++ b/htdocs/langs/fr_GA/propal.lang
@@ -1,2 +1,101 @@
 # Dolibarr language file - Source file is en_US - propal
-PdfCommercialProposalTitle=Proposal
+Proposals=Propositions commerciales
+Proposal=Proposition commerciale
+ProposalShort=Proposition
+ProposalsDraft=Propositions commerciales brouillons
+ProposalsOpened=Propositions commerciales ouvertes
+CommercialProposal=Proposition commerciale
+PdfCommercialProposalTitle=Proposition
+ProposalCard=Fiche proposition
+NewProp=Nouvelle proposition commerciale
+NewPropal=Nouvelle proposition
+Prospect=Prospect
+DeleteProp=Supprimer proposition
+ValidateProp=Valider proposition
+AddProp=Créer une proposition
+ConfirmDeleteProp=Êtes-vous sûr de vouloir effacer cette proposition commerciale ?
+ConfirmValidateProp=Êtes-vous sûr de vouloir valider cette proposition commerciale sous la référence <b>%s</b> ?
+LastPropals=Les %s dernières propositions commerciales
+LastModifiedProposals=Les %s dernières propositions commerciales modifiées
+AllPropals=Toutes les propales
+SearchAProposal=Rechercher une proposition commerciale
+NoProposal=Pas de proposition
+ProposalsStatistics=Statistiques des propositions commerciales
+NumberOfProposalsByMonth=Nombre par mois
+AmountOfProposalsByMonthHT=Montant par mois (HT)
+NbOfProposals=Nombre de propositions commerciales
+ShowPropal=Afficher proposition
+PropalsDraft=Brouillons
+PropalsOpened=Ouvert
+PropalStatusDraft=Brouillon (à valider)
+PropalStatusValidated=Validée (proposition ouverte)
+PropalStatusSigned=Signée (à facturer)
+PropalStatusNotSigned=Non signée (fermée)
+PropalStatusBilled=Facturée
+PropalStatusDraftShort=Brouillon
+PropalStatusValidatedShort=Ouvert
+PropalStatusClosedShort=Fermée
+PropalStatusSignedShort=Signée
+PropalStatusNotSignedShort=Non signée
+PropalStatusBilledShort=Facturée
+PropalsToClose=Propositions commerciales à fermer
+PropalsToBill=Propositions commerciales signées à facturer
+ListOfProposals=Liste des devis/propositions commerciales
+ActionsOnPropal=Événements sur la proposition
+RefProposal=Réf. proposition commerciale
+SendPropalByMail=Envoyer proposition commerciale par email
+DatePropal=Date de proposition
+DateEndPropal=Date de fin de validité
+ValidityDuration=Durée de validité
+SetAcceptedRefused=Accepter/Refuser 
+ErrorPropalNotFound=Propale %s inexistante
+AddToDraftProposals=Ajouter à proposition brouillon
+NoDraftProposals=Pas de propositions brouillons
+CopyPropalFrom=Créer proposition/devis par recopie d'un proposition existante
+CreateEmptyPropal=Créer proposition/devis vierge ou avec la liste des produits/services
+DefaultProposalDurationValidity=Délai de validité par défaut (en jours)
+DefaultPuttingPricesUpToDate=Par défaut, mettre à jour les prix lors de clonage d'une proposition commerciale
+DefaultPuttingDescUpToDate=Par défaut, mettre à jour les descriptions lors de clonage d'une proposition commerciale
+UseCustomerContactAsPropalRecipientIfExist=Utiliser l'adresse de 'contact suivi client' si définie plutôt que l'adresse du tiers comme destinataire des propositions
+ConfirmClonePropal=Êtes-vous sûr de vouloir cloner la proposition commerciale <b>%s</b> ?
+ConfirmReOpenProp=Êtes-vous sûr de vouloir réouvrir la proposition commerciale <b>%s</b> ?
+ProposalsAndProposalsLines=Propositions commerciales clients et lignes de propositions
+ProposalLine=Ligne de proposition
+ProposalLines=Ligne de proposition
+AvailabilityPeriod=Délai de livraison
+SetAvailability=Définir le délai de livraison
+AfterOrder=après commande
+OtherProposals=Autres propositions
+##### Availability #####
+AvailabilityTypeAV_NOW=Immédiate
+AvailabilityTypeAV_1W=1 semaine
+AvailabilityTypeAV_2W=2 semaines
+AvailabilityTypeAV_3W=3 semaines
+AvailabilityTypeAV_1M=1 mois
+##### Types de contacts #####
+TypeContact_propal_internal_SALESREPFOLL=Commercial suivi proposition
+TypeContact_propal_external_BILLING=Contact client facturation proposition
+TypeContact_propal_external_CUSTOMER=Contact client suivi proposition
+TypeContact_propal_external_SHIPPING=Contact client pour la livraison
+# Document models
+DocModelAzurDescription=Un modèle de proposition complet (ancienne implémentation du modèle Cyan)
+DocModelCyanDescription=Un modèle de proposition complet
+DefaultModelPropalCreate=Modèle par défaut à la création
+DefaultModelPropalToBill=Modèle par défaut lors de la clôture d'une proposition commerciale (à facturer)
+DefaultModelPropalClosed=Modèle par défaut lors de la clôture d'une proposition commerciale (non facturée)
+ProposalCustomerSignature=Cachet, Date, Signature et mention "Bon pour Accord"
+ProposalsStatisticsSuppliers=Statistiques de propositions commerciales
+CaseFollowedBy=Affaire suivie par
+SignedOnly=Signé seulement
+IdProposal=ID de la proposition commerciale
+IdProduct=ID produit
+PrParentLine=Ligne parent de proposition
+LineBuyPriceHT=Prix d'achat HT de la ligne
+SignPropal=Accepter la proposition
+RefusePropal=Refuser la proposition
+Sign=Signer
+PropalAlreadySigned=Proposition déjà accetpée
+PropalAlreadyRefused=Proposition déjà refusée
+PropalSigned=Proposition acceptée
+PropalRefused=Proposition refusée
+ConfirmRefusePropal=Êtes-vous sûr de vouloir refuser cette proposition ?
