--- a/htdocs/langs/fr_GA/sendings.lang
+++ b/htdocs/langs/fr_GA/sendings.lang
@@ -1,2 +1,76 @@
 # Dolibarr language file - Source file is en_US - sendings
-ShipmentCreationIsDoneFromOrder=For the moment, creation of a new shipment is done from the Sales Order record.
+RefSending=Réf. expédition
+Sending=Expédition
+Sendings=Expéditions
+AllSendings=Toutes les expéditions
+Shipment=Expédition
+Shipments=Expéditions
+ShowSending=Afficher Expéditions
+Receivings=Bons de réceptions
+SendingsArea=Espace expéditions
+ListOfSendings=Liste des expéditions
+SendingMethod=Méthode d'expédition
+LastSendings=Les %s dernières expéditions
+StatisticsOfSendings=Statistiques des expéditions
+NbOfSendings=Nombre d'expéditions
+NumberOfShipmentsByMonth=Nombre d'expéditions par mois
+SendingCard=Fiche expédition
+NewSending=Nouvelle expédition
+CreateShipment=Créer expédition
+QtyShipped=Qté. expédiée
+QtyShippedShort=Qté exp.
+QtyPreparedOrShipped=Quantité préparée ou envoyée
+QtyToShip=Qté. à expédier
+QtyToReceive=Qté à recevoir
+QtyReceived=Qté. reçue
+QtyInOtherShipments=Qté dans les autres expéditions
+KeepToShip=Reste à expédier
+KeepToShipShort=Reste
+OtherSendingsForSameOrder=Autres expéditions pour cette commande
+SendingsAndReceivingForSameOrder=Expéditions et réceptions pour cette commande
+SendingsToValidate=Expéditions à valider
+StatusSendingCanceled=Annulée
+StatusSendingCanceledShort=Annulée
+StatusSendingDraft=Brouillon
+StatusSendingValidated=Validée (produits à envoyer ou envoyés)
+StatusSendingProcessed=Traitée
+StatusSendingDraftShort=Brouillon
+StatusSendingValidatedShort=Validée
+StatusSendingProcessedShort=Traitée
+SendingSheet=Fiche expédition
+ConfirmDeleteSending=Êtes-vous sûr de vouloir supprimer cette expédition ?
+ConfirmValidateSending=Êtes-vous sûr de vouloir valider cette expédition sous la référence <b>%s</b>?
+ConfirmCancelSending=Êtes-vous sûr de vouloir annuler cette expédition ?
+DocumentModelMerou=Modèle Merou A5
+WarningNoQtyLeftToSend=Alerte, aucun produit en attente d'expédition.
+StatsOnShipmentsOnlyValidated=Les statistiques ne prennent en compte que les envois validés. La date utilisée est celle qui est la date de validation de l'envoi (la date de réception prévue n'est pas nécessairement connue)
+DateDeliveryPlanned=Date prévue de livraison
+RefDeliveryReceipt=Ref bon de réception
+StatusReceipt=Status du bon de réception
+DateReceived=Date de réception réelle
+ClassifyReception=Classer la réception
+SendShippingByEMail=Envoyer bon d'expédition par email
+SendShippingRef=Envoi du bordereau d'expédition %s
+ActionsOnShipping=Événements sur l'expédition
+LinkToTrackYourPackage=Lien pour le suivi de votre colis
+ShipmentCreationIsDoneFromOrder=Pour le moment, la création d'une nouvelle expédition se fait depuis la fiche commande client.
+ShipmentLine=Ligne d'expédition
+ProductQtyInCustomersOrdersRunning=Quantité de produit en commandes client ouvertes
+ProductQtyInSuppliersOrdersRunning=Quantité de produit de commandes fournisseur ouvertes
+ProductQtyInShipmentAlreadySent=Quantité de produit en commande ouverte déjà expédiée
+ProductQtyInSuppliersShipmentAlreadyRecevied=Quantité de produit déjà reçu en commandes fournisseur ouvertes
+NoProductToShipFoundIntoStock=Aucun produit à expédier n'a été trouvé dans l'entrepôt <b>%s</b>. Corrigez le stock ou choisissez un autre entrepôt.
+WeightVolShort=Poids/vol.
+ValidateOrderFirstBeforeShipment=Vous devez d'abord valider la commande pour pouvoir créer une expédition.
+
+# Sending methods
+# ModelDocument
+DocumentModelTyphon=Modèle de bon de réception/livraison complet (logo…)
+DocumentModelStorm=Modèle de document plus complet des fiches expéditions et compatibilité avec les attributs complémentaires (logo,...)
+Error_EXPEDITION_ADDON_NUMBER_NotDefined=Constante EXPEDITION_ADDON_NUMBER non définie
+SumOfProductVolumes=Somme des volumes des produits
+SumOfProductWeights=Somme des poids des produits
+
+# warehouse details
+DetailWarehouseNumber= Détail de l'entrepôt
+DetailWarehouseFormat= W:%s (Qté : %d)
