Modify display of localtaxe2

--- a/htdocs/langs/en_US/compta.lang
+++ b/htdocs/langs/en_US/compta.lang
@@ -34,6 +34,7 @@ AccountingCredit=Credit
 Piece=Accounting Doc.
 AmountHTVATRealReceived=Net collected
 AmountHTVATRealPaid=Net paid
+MenuVAT=VAT
 VATToPay=Tax sales
 VATReceived=Tax received
 VATToCollect=Tax purchases
