Update lang fr_GA

--- a/htdocs/langs/fr_GA/main.lang
+++ b/htdocs/langs/fr_GA/main.lang
@@ -375,7 +375,7 @@ AmountHTShort=Montant HT
 AmountTTCShort=Montant TTC
 AmountHT=Montant HT
 AmountTTC=Montant TTC
-AmountVAT=Montant TVA
+AmountVAT=Montant CSS
 MulticurrencyAlreadyPaid=Déjà payé, devise d'origine
 MulticurrencyRemainderToPay=Reste à payer (devise d'origine)
 MulticurrencyPaymentAmount=Montant du règlement (devise d'origine)
@@ -383,7 +383,7 @@ MulticurrencyAmountHT=Montant HT, devise d'origine
 MulticurrencyAmountTTC=Montant TTC, devise d'origine
 MulticurrencyAmountVAT=Montant TVA, devise d'origine
 MulticurrencySubPrice=Montant sous-prix multi devises
-AmountLT1=Montant Tax 2
+AmountLT1=Montant TVA
 AmountLT2=Montant Tax 3
 AmountLT1ES=Montant RE
 AmountLT2ES=Montant IRPF
@@ -405,9 +405,9 @@ TotalHTforthispage=Montant (HT) pour la page
 Totalforthispage=Total pour cette page
 TotalTTC=Total TTC
 TotalTTCToYourCredit=Total TTC à votre crédit
-TotalVAT=Total TVA
+TotalVAT=Total CSS
 TotalVATIN=Total IGST
-TotalLT1=Total Taxe 2
+TotalLT1=Total TVA
 TotalLT2=Total Taxe 3
 TotalLT1ES=Total RE
 TotalLT2ES=Total IRPF
@@ -415,14 +415,14 @@ TotalLT1IN=Total CGST
 TotalLT2IN=Total SGST
 HT=HT
 TTC=TTC
-INCVATONLY=TVA incluse
-INCT=TVA+Taxes locales incluses
-VAT=TVA
+INCVATONLY=CSS incluse
+INCT=CSS+TVA incluses
+VAT=CSS
 VATIN=IGST
-VATs=TVA
+VATs=CSS
 VATINs=Taxes IGST
-LT1=Taxe de vente 2
-LT1Type=Type de la taxe de vente 2
+LT1=TVA
+LT1Type=Type de la TVA
 LT2=Taxe de vente 3
 LT2Type=Type de la taxe de vente 3
 LT1ES=RE
@@ -430,10 +430,10 @@ LT2ES=IRPF
 LT1IN=CGST
 LT2IN=SGST
 LT1GC=Centimes supplémentaires
-VATRate=Taux TVA
-RateOfTaxN=Taux de tax %s
-VATCode=Code Taux TVA
-VATNPR=TVA NPR
+VATRate=Taux CSS
+RateOfTaxN=Taux TVA
+VATCode=Code Taux CSS
+VATNPR=CSS NPR
 DefaultTaxRate=Taux de taxe par défaut
 Average=Moyenne
 Sum=Somme
