--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -212,8 +212,8 @@ Select=Select
 SelectAll=Select all
 Choose=Choose
 Resize=Resize
+Crop=Crop
 ResizeOrCrop=Resize or Crop
-Recenter=Recenter
 Author=Author
 User=User
 Users=Users
