FIX : one could pay many times for the same contract line

--- a/htdocs/langs/de_DE/contracts.lang
+++ b/htdocs/langs/de_DE/contracts.lang
@@ -102,3 +102,4 @@ TypeContact_contrat_external_SALESREPSIGN=Vertragsunterzeichnung durch Kundenkon
 HideClosedServiceByDefault=Verstecke beendete Dienste (standard)
 ShowClosedServices=Zeige beendete Dienste
 HideClosedServices=Verstecke beendete Dienste
+ContractLinePaid=Vertrag Linie bezahlt
