--- a/htdocs/langs/en_US/contracts.lang
+++ b/htdocs/langs/en_US/contracts.lang
@@ -102,3 +102,4 @@ TypeContact_contrat_external_SALESREPSIGN=Signing contract customer contact
 HideClosedServiceByDefault=Hide closed services by default
 ShowClosedServices=Show Closed Services
 HideClosedServices=Hide Closed Services
+ContractLinePaid=Contract line paid
