--- a/htdocs/langs/fr_FR/contracts.lang
+++ b/htdocs/langs/fr_FR/contracts.lang
@@ -102,3 +102,4 @@ TypeContact_contrat_external_SALESREPSIGN=Contact client signataire contrat
 HideClosedServiceByDefault=Masquer les services fermés par défaut
 ShowClosedServices=Afficher les services fermés
 HideClosedServices=Masquer les services fermés
+ContractLinePaid=Ligne de contrat payée
