--- a/htdocs/langs/en_US/accountancy.lang
+++ b/htdocs/langs/en_US/accountancy.lang
@@ -451,6 +451,7 @@ AccountancyClosureClose=Close fiscal period
 AccountancyClosureAccountingReversal=Extract entries
 AccountancyClosureStep3NewFiscalPeriod=Next fiscal period
 AccountancyClosureGenerateClosureBookkeepingRecords=Add closing bookkeeping records
+AccountancyClosureSeparateAuxiliaryAccounts=Separate auxiliary accounts
 AccountancyClosureCloseSuccessfully=Fiscal period has been closed successfully
 AccountancyClosureInsertAccountingReversalSuccessfully=Bookkeeping records has been inserted successfully
 
