--- a/htdocs/langs/en_US/accountancy.lang
+++ b/htdocs/langs/en_US/accountancy.lang
@@ -451,6 +451,7 @@ AccountancyClosureClose=Close fiscal period
 AccountancyClosureAccountingReversal=Extract entries
 AccountancyClosureStep3NewFiscalPeriod=Next fiscal period
 AccountancyClosureGenerateClosureBookkeepingRecords=Generate "has-new" entry on the next fiscal period
+AccountancyClosureSeparateAuxiliaryAccounts=When generating the "has-new" entry, detail the sub-ledger accounts
 AccountancyClosureCloseSuccessfully=Fiscal period has been closed successfully
 AccountancyClosureInsertAccountingReversalSuccessfully=Bookkeeping records has been inserted successfully
 
