--- a/htdocs/langs/fr_FR/salaries.lang
+++ b/htdocs/langs/fr_FR/salaries.lang
@@ -25,3 +25,8 @@ SalariesAndPayments=Salaires et paiements
 ConfirmDeleteSalaryPayment=Voulez-vous supprimer ce paiement de salaire ?
 FillFieldFirst=Remplissez d'abord le champ de l'employé
 UpdateAmountWithLastSalary=Définir sur le montant du dernier salaire
+MakeTransferRequest=Faire une demande de virement
+VirementOrder=Ordres de virements
+BankTransferAmount=Montant de la demande de virement : 
+WithdrawalReceipt=Ordre de virement
+OrderWaiting=En attente de traitement
