--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -1102,6 +1102,7 @@ DictionaryExpenseTaxRange=Expense report - Range by transportation category
 DictionaryTransportMode=Intracomm report - Transport mode
 DictionaryBatchStatus=Product lot/serial Quality Control status
 DictionaryAssetDisposalType=Type of disposal of assets
+DictionaryInvoiceSubtype=Invoice Subtypes
 TypeOfUnit=Type of unit
 SetupSaved=Setup saved
 SetupNotSaved=Setup not saved
