--- a/htdocs/langs/en_US/bills.lang
+++ b/htdocs/langs/en_US/bills.lang
@@ -641,3 +641,4 @@ MentionCategoryOfOperations=Category of operations
 MentionCategoryOfOperations0=Delivery of goods
 MentionCategoryOfOperations1=Provision of services
 MentionCategoryOfOperations2=Mixed - Delivery of goods & provision of services
+InvoiceSubtype=Invoice Subtype
