added recursive deletion option for child MOs + added recursive recovery method for child MOs

--- a/htdocs/langs/fr_FR/mrp.lang
+++ b/htdocs/langs/fr_FR/mrp.lang
@@ -34,6 +34,8 @@ DeleteBillOfMaterials=Supprimer la nomenclature
 DeleteMo=Supprimer l'ordre de fabrication
 ConfirmDeleteBillOfMaterials=Êtes-vous sûr de vouloir supprimer cette nomenclature?
 ConfirmDeleteMo=Êtes-vous sûr de vouloir supprimer cet ordre de fabrication ?
+DeleteMoChild = Supprimer les OFs enfants liés à cet OF
+MoChildsDeleted = Tous les OFs enfants ont été supprimés
 MenuMRP=Ordres de fabrication
 NewMO=Nouvel Ordre de fabrication
 QtyToProduce=Quantité à produire
