--- a/htdocs/langs/en_US/mrp.lang
+++ b/htdocs/langs/en_US/mrp.lang
@@ -34,6 +34,8 @@ DeleteBillOfMaterials=Delete Bill Of Materials
 DeleteMo=Delete Manufacturing Order
 ConfirmDeleteBillOfMaterials=Are you sure you want to delete this Bill Of Materials?
 ConfirmDeleteMo=Are you sure you want to delete this Manufacturing Order?
+DeleteMoChild = Delete the child OFs linked to this OF
+MoChildsDeleted = All child OFs have been deleted
 MenuMRP=Manufacturing Orders
 NewMO=New Manufacturing Order
 QtyToProduce=Qty to produce
