--- a/htdocs/langs/fr_FR/mrp.lang
+++ b/htdocs/langs/fr_FR/mrp.lang
@@ -34,7 +34,7 @@ DeleteBillOfMaterials=Supprimer la nomenclature
 DeleteMo=Supprimer l'ordre de fabrication
 ConfirmDeleteBillOfMaterials=Êtes-vous sûr de vouloir supprimer cette nomenclature?
 ConfirmDeleteMo=Êtes-vous sûr de vouloir supprimer cet ordre de fabrication ?
-DeleteMoChild = Supprimer les OFs enfants liés à cet OF (%s)
+DeleteMoChild = Supprimer les OFs enfants liés à cet OF %s
 MoChildsDeleted = Tous les OFs enfants ont été supprimés
 MenuMRP=Ordres de fabrication
 NewMO=Nouvel Ordre de fabrication
