--- a/htdocs/langs/fr_FR/other.lang
+++ b/htdocs/langs/fr_FR/other.lang
@@ -66,6 +66,7 @@ Notify_BILL_SUPPLIER_SENTBYMAIL=Envoi facture fournisseur par email
 Notify_BILL_SUPPLIER_CANCELED=Facture fournisseur annulée
 Notify_CONTRACT_VALIDATE=Validation contrat
 Notify_FICHINTER_VALIDATE=Validation fiche d'intervention
+Notify_FICHINTER_CLOSE=Intervention réalisée
 Notify_FICHINTER_ADD_CONTACT=Contact ajouté à l'intervention
 Notify_FICHINTER_SENTBYMAIL=Envoi fiche d'intervention par email
 Notify_SHIPPING_VALIDATE=Validation expédition
