--- a/htdocs/langs/en_US/other.lang
+++ b/htdocs/langs/en_US/other.lang
@@ -200,6 +200,7 @@ AmountIn=Amount in %s
 NumberOfUnitsMos=Number of units to produce in manufacturing orders
 EMailTextInterventionAddedContact=A new intervention %s has been assigned to you.
 EMailTextInterventionValidated=The intervention %s has been validated.
+EMailTextInterventionClosed=The intervention %s has been closed.
 EMailTextInvoiceValidated=Invoice %s has been validated.
 EMailTextInvoicePayed=Invoice %s has been paid.
 EMailTextProposalValidated=Proposal %s has been validated.
