--- a/htdocs/langs/fr_FR/interventions.lang
+++ b/htdocs/langs/fr_FR/interventions.lang
@@ -14,10 +14,12 @@ InterventionContact=Contact intervention
 DeleteIntervention=Supprimer intervention
 ValidateIntervention=Valider intervention
 ModifyIntervention=Modifier intervention
+CloseIntervention=Clôturer intervention
 DeleteInterventionLine=Supprimer ligne d'intervention
 ConfirmDeleteIntervention=Êtes-vous sûr de vouloir effacer cette intervention ?
 ConfirmValidateIntervention=Êtes-vous sûr de vouloir valider cette intervention sous la référence <b>%s</b> ?
 ConfirmModifyIntervention=Êtes-vous sûr de vouloir modifier cette intervention ?
+ConfirmCloseIntervention=Êtes-vous sûr de vouloir clôturer cette intervention ?
 ConfirmDeleteInterventionLine=Êtes-vous sûr de vouloir effacer cette ligne ?
 ConfirmCloneIntervention=Êtes-vous sûr de vouloir cloner cette intervention ?
 NameAndSignatureOfInternalContact=Nom et signature de l'intervenant :
