--- a/ChangeLog
+++ b/ChangeLog
@@ -19,9 +19,10 @@ WARNING:
 Following changes may create regressions for some external modules, but were necessary to make Dolibarr better:
 * The property ->brouillon has been removed from all classes. It was not reliable and was a duplicate of ->status == self::STATUS_DRAFT.
 * The method get_substitutionarray_shipment_lines() has been removed. Use the generic get_substitutionarray_lines() instead.
-* Recheck setup of your module workflow to see if you need to enable the new setting to have shipment set to billed automatically 
-  when an invoice from a shipment is validated (and if your process is to make invoice on shipment and not on order).
-* It was possible to use a variable $soc or $right inside a php code condition of some extrafields properties, this is no more true (this vars are no more defined globaly).
+* The method ProductcustomerPrice->fetch_all_log() has been renamed into camel case ->fetchAllLog()
+* Recheck setup of your module workflow to see if you need to enable the new setting to have shipment set to billed automatically
+  when an invoice from a shipment is validated (and if your process is to make invoice on shipment and not on order), because this setup has changed.
+* It was possible to use a variable $soc or $right inside a php code condition of some extrafields properties, this is no more true (this variables are no more defined globaly).
 
 
 
