Add partial lettering

--- a/htdocs/langs/en_US/accountancy.lang
+++ b/htdocs/langs/en_US/accountancy.lang
@@ -418,6 +418,7 @@ Formula=Formula
 ## Lettering
 LetteringAuto=Lettering auto
 LetteringManual=Lettering manual
+LetteringPartial=Lettering partial
 Unlettering=Unlettering
 UnletteringAuto=Unlettering auto
 UnletteringManual=Unlettering manual
