--- a/htdocs/langs/en_US/cashdesk.lang
+++ b/htdocs/langs/en_US/cashdesk.lang
@@ -145,3 +145,4 @@ ShowProductReference=Show reference or label of products
 UsePriceHT=Use price excl. taxes and not price incl. taxes
 TerminalName=Terminal %s
 TerminalNameDesc=Terminal name
+TakeposNeedsPayment=TakePOS needs a payment method to work, do you want to create the payment method 'Cash'?
