--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -307,7 +307,7 @@ MAIN_MAIL_SMTPS_ID=SMTP ID (if sending server requires authentication)
 MAIN_MAIL_SMTPS_PW=SMTP Password (if sending server requires authentication)
 MAIN_MAIL_EMAIL_TLS=Use TLS (SSL) encryption
 MAIN_MAIL_EMAIL_STARTTLS=Use TLS (STARTTLS) encryption
-MAIN_MAIL_EMAIL_SMTP_ALLOW_SELF_SIGNED=Authorise les certificats auto-signés
+MAIN_MAIL_EMAIL_SMTP_ALLOW_SELF_SIGNED=Authorize self-signed certificates
 MAIN_MAIL_EMAIL_DKIM_ENABLED=Use DKIM to generate email signature
 MAIN_MAIL_EMAIL_DKIM_DOMAIN=Email Domain for use with dkim
 MAIN_MAIL_EMAIL_DKIM_SELECTOR=Name of dkim selector
