--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -1974,7 +1974,7 @@ HighlightLinesOnMouseHover=Highlight table lines when mouse move passes over
 HighlightLinesColor=Highlight color of the line when the mouse passes over (use 'ffffff' for no highlight)
 HighlightLinesChecked=Highlight color of the line when it is checked (use 'ffffff' for no highlight)
 UseBorderOnTable=Show left-right borders on tables
-UseCompactRow=Table line spacing compact
+TableLineHeight=Table line height
 BtnActionColor=Color of the action button
 TextBtnActionColor=Text color of the action button
 TextTitleColor=Text color of Page title
@@ -2419,3 +2419,4 @@ SeeConfFile=See inside conf.php file on the server
 ReEncryptDesc=Reencrypt data if not yet encrypted
 PasswordFieldEncrypted=%s new record have this field been encrypted
 ExtrafieldsDeleted=Extrafields %s has been deleted
+LargeModern=Large - Modern
