--- a/htdocs/langs/fr_FR/bills.lang
+++ b/htdocs/langs/fr_FR/bills.lang
@@ -641,3 +641,5 @@ MentionCategoryOfOperations=Catégorie d'opérations
 MentionCategoryOfOperations0=Livraison de marchandises
 MentionCategoryOfOperations1=Prestation de services
 MentionCategoryOfOperations2=Mixte - Livraison de biens & prestation de services
+SalaryBill=Facture salaire
+Salaries=Salaires
