--- a/htdocs/langs/fr_FR/main.lang
+++ b/htdocs/langs/fr_FR/main.lang
@@ -1240,3 +1240,4 @@ DateOfPrinting=Date d'impression
 ClickFullScreenEscapeToLeave=Cliquez ici pour passer en mode plein écran. Appuyez sur ÉCHAP pour quitter le mode plein écran.
 UserNotYetValid=Not yet valid
 UserExpired=Expiré
+AmountSalary=Montant salaire
