--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -2090,9 +2090,10 @@ MAIN_PDF_NO_SENDER_FRAME=Hide borders on sender address frame
 MAIN_PDF_NO_RECIPENT_FRAME=Hide borders on recipent address frame
 MAIN_PDF_HIDE_CUSTOMER_CODE=Hide customer code
 MAIN_PDF_HIDE_SENDER_NAME=Hide sender/company name in address block
-MAIN_PDF_ADD_TERMSTOSALE_PROPAL=Add the conditions of sale after the proposal
-MAIN_PDF_ADD_TERMSTOSALE_ORDER=Add the conditions of sale after the order
-MAIN_PDF_ADD_TERMSTOSALE_INVOICE=Add the conditions of sale after the invoice
+TERMSTOSALE=Conditions de vente
+MAIN_PDF_ADD_TERMSOFSALE_PROPAL=Add the conditions of sale after the proposal
+MAIN_PDF_ADD_TERMSOFSALE_ORDER=Add the conditions of sale after the order
+MAIN_PDF_ADD_TERMSOFSALE_INVOICE=Add the conditions of sale after the invoice
 PROPOSAL_PDF_HIDE_PAYMENTTERM=Hide payments conditions
 PROPOSAL_PDF_HIDE_PAYMENTMODE=Hide payment mode
 MAIN_PDF_PROPAL_USE_ELECTRONIC_SIGNING=Add electronic sign in PDF
