NEW - Right for stats orders (#24607)
* NEW - Right for stats orders

* NEW: use account address in sepa mandate (#23642)

* New: allow to display account address in pdf sepa mandate. Fix: use ->proprio because ->account_owner does not exist.

* Stickler fix

---------

Co-authored-by: Anthony Berton <anthony.berton@bb2a.fr>
Co-authored-by: thomas-Ngr <tnegre@open-dsi.fr>

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,8 @@ English Dolibarr ChangeLog
 
 For users:
 ----------
-...
+
+NEW: Right for stats orders new const MAIN_NEED_EXPORT_PERMISSION_TO_READ_STATISTICS
 
 For developers or integrators:
 ------------------------------
