NEW : conf to display date entry stock exped and sort in date order (#22625)
* NEW : Date d'entree en stock sur les exped au moment de la création

* add en trad

* Ajout conf pour la date d'entree en stock

* add trad

* trad

* Fixing style errors.

* modif for only full group by

---------

Co-authored-by: stickler-ci <support@stickler-ci.com>
Co-authored-by: Laurent Destailleur <eldy@destailleur.fr>

--- a/htdocs/langs/en_US/sendings.lang
+++ b/htdocs/langs/en_US/sendings.lang
@@ -75,6 +75,8 @@ SumOfProductWeights=Sum of product weights
 # warehouse details
 DetailWarehouseNumber= Warehouse details
 DetailWarehouseFormat= W:%s (Qty: %d)
+SHIPPING_DISPLAY_STOCK_ENTRY_DATE=Display last date of entry in stock during shipment creation for serial number or batch
+CreationOptions=Available options during shipment creation
 
 ShipmentDistribution=Shipment distribution
 
