--- a/htdocs/langs/fr_FR/stocks.lang
+++ b/htdocs/langs/fr_FR/stocks.lang
@@ -319,6 +319,7 @@ StockTransferRightRead=Lire les transferts de stocks
 StockTransferRightCreateUpdate=Créer/Mettre à jour les transferts de stocks
 StockTransferRightDelete=Supprimer les transferts de stocks
 BatchNotFound=Lot/série introuvable pour ce produit
+StockEntryDate=Dernière date <br>d'entrée en stock
 IncludeSubWarehouse=Inclure les sous-entrepôts ?
 StockMovementWillBeRecorded=Les mouvements de stock seront enregistrés
 StockMovementNotYetRecorded=Le mouvement des stocks ne sera pas affecté par cette étape
