--- a/htdocs/langs/en_US/categories.lang
+++ b/htdocs/langs/en_US/categories.lang
@@ -77,6 +77,7 @@ CatMemberList=List of members tags/categories
 CatContactList=List of contacts tags/categories
 CatProjectsList=List of projects tags/categories
 CatUsersList=List of users tags/categories
+CatSupplier_invoicesLinks=Links between supplier invoices and tags/categories
 CatSupLinks=Links between vendors and tags/categories
 CatCusLinks=Links between customers/prospects and tags/categories
 CatContactsLinks=Links between contacts/addresses and tags/categories
