--- a/htdocs/langs/fr_FR/sendings.lang
+++ b/htdocs/langs/fr_FR/sendings.lang
@@ -80,4 +80,5 @@ CreationOptions=Options disponibles à la création d'une expédition
 ShipmentDistribution=Répartition des expéditions
 
 ErrorTooManyCombinationBatchcode=Pas de répartition pour la ligne %s car trop de combinaisons entrepôt, produit, code de lot ont été trouvées (%s).
-ErrorNoCombinationBatchcode=Pas de répartition pour la ligne %s car aucune combinaison entrepôt, produit, code de lot n'a été trouvée.
+ErrorNoCombinationBatchcode=Impossible d'enregistrer la ligne %s car la combinaison entrepôt-produit-lot/série (%s, %s, %s) n'a pas été trouvée en stock.
+
