--- a/htdocs/langs/en_US/sendings.lang
+++ b/htdocs/langs/en_US/sendings.lang
@@ -81,6 +81,6 @@ CreationOptions=Available options during shipment creation
 ShipmentDistribution=Shipment distribution
 
 ErrorTooManyCombinationBatchcode=No dispatch for line %s as too many combinations of warehouse, product, batch code was found (%s).
-ErrorNoCombinationBatchcode=No dispatch for line %s as no combination of warehouse, product, batch code was found.
+ErrorNoCombinationBatchcode=Could not save the line %s as the combination of warehouse-product-lot/serial (%s, %s, %s) was not found in stock.
 
 ErrorTooMuchShipped=Quantity shipped should not be greater than quantity ordered for line %s
