New add auto update multicurrency rate

--- a/htdocs/langs/en_US/multicurrency.lang
+++ b/htdocs/langs/en_US/multicurrency.lang
@@ -40,3 +40,4 @@ CurrencyCodeId=Currency ID
 CurrencyCode=Currency code
 CurrencyUnitPrice=Unit price in foreign currency
 CurrencyPrice=Price in foreign currency
+MutltiCurrencyAutoUpdateCurrencies=Update all the currencies rate
