--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -655,7 +655,7 @@ Module2300Desc=Scheduled jobs management (alias cron or chrono table)
 Module2400Name=Events/Agenda
 Module2400Desc=Track events. Log automatic events for tracking purposes or record manual events or meetings. This is the principal module for good Customer or Vendor Relationship Management.
 Module2430Name=Online appointment scheduling
-Module2430Desc=Provide an online appointment booking system. This allow anyone to book rendez-vous, according to predefined ranges or availabilities.
+Module2430Desc=Provides an online appointment booking system. This allow anyone to book rendez-vous, according to predefined ranges or availabilities.
 Module2500Name=DMS / ECM
 Module2500Desc=Document Management System / Electronic Content Management. Automatic organization of your generated or stored documents. Share them when you need.
 Module2600Name=API / Web services (SOAP server)
@@ -1102,7 +1102,7 @@ DictionaryExpenseTaxRange=Expense report - Range by transportation category
 DictionaryTransportMode=Intracomm report - Transport mode
 DictionaryBatchStatus=Product lot/serial Quality Control status
 DictionaryAssetDisposalType=Type of disposal of assets
-DictionaryInvoiceSubtype=Invoice Subtypes
+DictionaryInvoiceSubtype=Invoice subtypes
 TypeOfUnit=Type of unit
 SetupSaved=Setup saved
 SetupNotSaved=Setup not saved
