--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -1253,4 +1253,4 @@ ErrorFailedToDeleteLink= Failed to remove link '<b>%s</b>'
 ErrorFailedToUpdateLink= Failed to update link '<b>%s</b>'
 URLToLink=URL to link
 OverwriteIfExists=Overwrite if file exists
-InvoiceSubtype=Invoice Subtype
+InvoiceSubtype=Invoice subtype
